1. DataJpaMealRepository/getWithUser  - remove comments 2. DataJpaUserRepository/getWithMeals    - remove @Transactional(readOnly = true) 3.  MealRestController/getWithUser    - remove method 4. AbstractUserController/getWithMeals    - remove method 5. MealTestData  - refactor vars meal[X], delete last parameter user 6. MealTestData/getWithMeal  - refactor, remove meal parameter from User() constructor. 7. DataJpaUserServiceTest/clearResult  - delete method 8.  User class  - change type from Set<Meal> to List<Meal> 9.  UserTestData / MealTestData  - add static block 10 .SpringMain - refactor